ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: polyfit
  namespace: polyfit
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`https://polyfit.trustful-solutions.com`) # change to your domain
      kind: Rule
      services:
        - name: polyfit
          port: 80
      middlewares:
        - name: default-headers
    - match: Host(`polyfit.trustful-solutions.com`) # change to your domain
      kind: Rule
      services:
        - name: polyfit
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: jimsgarage-tls # change to your cert
